--- a/Acord.cbp
+++ b/Acord.cbp
@@ -37,8 +37,8 @@
 			<Add library="kernel32" />
 			<Add library="comctl32" />
 		</Linker>
+		<Unit filename="README.md" />
 		<Unit filename="main.cpp" />
-		<Unit filename="readme.txt" />
 		<Extensions>
 			<code_completion />
 			<envvars />
